--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -130,103 +130,145 @@ body {
 }
 
 
-
-/* Flash Box Styles */
 .flash-box {
+  cursor: pointer;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  background: white;
   padding: 1em;
   margin: 1em;
-  background: white;
   text-align: center;
-  cursor: pointer;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  @include center-flex;
+  display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
   backface-visibility: hidden;
+
+  -webkit-transition: 0.6s;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transform: rotateY(0deg);
+  -moz-transition: 0.6s;
+  -moz-transform-style: preserve-3d;
+  -moz-transform: rotateY(0deg);
+  -o-transition: 0.6s;
+  -o-transform-style: preserve-3d;
+  -o-transform: rotateY(0deg);
+  -ms-transition: 0.6s;
+  -ms-transform-style: preserve-3d;
+  -ms-transform: rotateY(0deg);
   transition: 0.6s;
   transform-style: preserve-3d;
   transform: rotateY(0deg);
-  border: 5px solid $wood;
-  border-radius: 5px;
+  margin:0;
 }
-
-.flash-container {
+.flash-container{
   display: none;
 }
-
 .flash-card-container {
-  position: relative;
-  width: 80%;
-  max-width: 250px;
+  width:80%;
+  max-width:250px;
+  display: none;
   align-items: center;
   justify-content: center;
   text-align: center;
-  display: none;
   transition: all 0.5s ease;
   transform-style: preserve-3d;
-  perspective: 1000px;
-  transform: perspective(1000px);
-}
+  position: relative;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
 
+  -ms-transform: perspective(1000px);
+  -moz-transform: perspective(1000px);
+
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+
+  -webkit-transform: perspective(1000px);
+  -webkit-transition: 0.3s;
+  -webkit-transform-style: preserve-3d;
+  -ms-transition: 0.3s;
+  -moz-transition: 0.3s;
+
+  transition: 0.3s;
+  transform-style: preserve-3d;
+}
 .flash-text {
   font-size: 40px;
   font-weight: 600;
 }
-
 .flash-question-box {
-  position: relative;
+  position:relative;
   min-height: 200px;
-  background: $chalkboard-green;
-  color: $chalk-white;
-  font-family: $chalkboardFont;
+  background:$chalkboard-green;
+  color:$chalk-white;
+  font-family:'Pangolin', cursive;
   z-index: 2;
+  /* for firefox 31 */
+  -webkit-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
   box-shadow: $shadowLarge;
-
-  &::after {
+  &::after{
     position: absolute;
-    top: 10px;
-    left: 10px;
+    color:$chalk-white;
+    font-family:'Pangolin', cursive;
     content: "Question";
-    color: $chalk-white;
-    font-family: $chalkboardFont;
-    font-style: italic;
-    z-index: 10;
-    font-size: 20px;
-  }
-}
-
-.flash-answer-box {
-  position: relative;
-  min-height: 200px;
-  background: $chalkboard-green;
-  color: $chalk-white;
-  font-family: $chalkboardFont;
-  box-shadow: $shadowLarge;
-
-  &::after {
-    position: absolute;
     top: 10px;
     left: 10px;
+    font-style: italic;
+    z-index: 10;
+    font-size: 20px;
+    
+  }
+}
+.flash-answer-box {
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg); 
+  min-height: 200px;
+  background:$chalkboard-green;
+  color:$chalk-white;
+  font-family:'Pangolin', cursive;
+  box-shadow: $shadowLarge;
+
+  &::after{
+    position: absolute;
+    color:$chalk-white;
+    font-family:'Pangolin', cursive;
     content: "Answer";
-    color: $chalk-white;
-    font-family: $chalkboardFont;
+    top: 10px;
+    left: 10px;
     font-style: italic;
     z-index: 10;
     font-size: 20px;
   }
 }
-
+.flash-box{
+  border:5px solid $wood;
+  border-radius:5px;
+}
 .flip {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
+
 
 /* Sub Container Styles */
 .sub-container {
