--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -844,8 +844,8 @@ body {
   transition: all 0.6s cubic-bezier(.25,.8,.25,1);
     border:2px solid rgba(100,100,100,0);
   border-radius:100%;
-  width: 90px;
-  height:90px;
+  width: 85px;
+  height:85px;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -1722,7 +1722,7 @@ text-decoration: auto;
     font-size: 26px;
     color:$chalk-white;
     padding-bottom: 10px;
-
+  width:min-content;
 }
 
 
