--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -99,20 +99,6 @@ body {
 
 
 
-/* Brand Title Styles */
-.brand-title {
-  position: absolute;
-  top: 5vh;
-  left: 5vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 330px;
-  font-family: 'Londrina Shadow';
-  font-size: 22px;
-  color: $chalk-white;
-  z-index: 20;
-}
 
 /* Game Container Styles */
 .main-container {
@@ -1806,12 +1792,19 @@ text-align:center;
 .login-flash-message.error, .signup-flash-message.error, .forgot-password-flash-message.error,.forgot-username-flash-message.error{
   background-color: pink;
   color:red;
-  
+  font-family: roboto;
+    font-size: 12px;
+    padding: 10px 20px;
+    font-weight: 800;
   
   }
   .login-flash-message.success,  .signup-flash-message.success,  .forgot-password-flash-message.success,.forgot-username-flash-message.success{
     background-color: rgb(107, 216, 129);
     color:rgb(16, 75, 15);
+    font-family: roboto;
+    font-size: 12px;
+    padding: 10px 20px;
+    font-weight: 800;
     }
 /* The Modal (background) */
 
@@ -1983,6 +1976,7 @@ text-align:center;
   max-height:67vh;
 }
 @import './burger.scss';
+@import './brand.scss';
 @import './profile.scss';
 @import './success.scss';
 @import './media.scss';
