--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -42,7 +42,7 @@
             <p>
               <%= loginMessage %>
             </p>
-            <button class="close-login-alert" id="close-login-alert"><i class="close-login-alert-icon">x</i></button>
+            <!-- <button class="close-login-alert" id="close-login-alert"></button> -->
           </div>
 
 
