--- a/public/views/practice.ejs
+++ b/public/views/practice.ejs
@@ -23,7 +23,8 @@
 
   <%- include('partials/_burger') %>
   <%- include('partials/_brand') %>
-
+  <%- include('partials/_modals') %>
+<!-- 
     <div id="activity-alert-modal" class="message-modal">
       <div class="message-intro">Please Select An Activity </div>
     </div>
@@ -39,10 +40,10 @@
       <div class="message-intro">You got <span id="mc-quiz-amountCorrect" class="amountCorrect"></span> /10
         Correct! </br> That's <span id="mc-quiz-amountCorrectPercentage" class="amountCorrect"> </span>
       </div>
-    </div>
+    </div> -->
 
     <div class="main-container" id="main-container">
-
+      <%- include('partials/_activityMenuPractice') %>
       <div class="practice-menu-container display-container" id="practice-menu-container">
         <div class="activity-group">
           <div class="top practice-top">
@@ -70,78 +71,13 @@
 
       </div>
 
-      <div class="operator-menu-container display-container" id="operator-menu-container">
-        <div class="nav-left nav-left-upper"> <button title="nav-button-backward" class="nav-button"
-            id="operator-practice-menu-backward-upper"><i class=" back-arrow fas fa-arrow-left fa-lg"></i></button>
-        </div>
-        <div class="operator-group">
-          <div class="top">
-            <div class="header">What would you like to learn about?</div>
-          </div>
-          <div class="middle">
-            <div class="middle-inner">
-              <div class="inner">
-                <div class=" icon-container add operator-choice" data-sub="+" id="add">
-                  <i class="plus-icon icon fas fa-plus fa-large"></i>
-                </div>
-                <div class="operator-text addition">Addition</div>
-              </div>
-              <div class="inner">
-                <div class=" icon-container minus operator-choice" data-sub="-" id="sub">
-                  <i class=" minus-icon icon fas fa-minus fa-large"></i>
-                </div>
-                <div class="operator-text subtraction">Subtraction</div>
-              </div>
-              <div class="inner">
-                <div class=" icon-container mult operator-choice" data-sub="x" id="mul">
-                  <i class=" times-icon icon fas fa-times fa-large"></i>
-                </div>
-                <div class="operator-text multiplication">Multiplication</div>
-              </div>
-              <div class="inner">
-                <div class=" icon-container div operator-choice" data-sub="/" id="div">
-                  <i class=" divide-icon icon fas fa-divide fa-large"></i>
-                </div>
-                <div class="operator-text division">Division</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="nav-buttons">
-          <div class="nav-left nav-left-lower"> <button title="nav-button-backward" class="nav-button"
-              id="operator-practice-menu-backward-lower"><i class=" back-arrow fas fa-arrow-left fa-lg"></i></button>
-          </div>
-          <div class="nav-right"> <button title="nav-button-forward" class="nav-button" id="operator-menu-forward"><i
-                class=" forward-arrow fas fa-arrow-right fa-lg"></i></button>
-          </div>
-        </div>
-      </div>
+
+  <%- include('partials/_operatorMenu') %>
 
 
-      <div class="difficulty-menu-container display-container" id="difficulty-menu-container">
-        <div class="nav-left nav-left-upper"> <button title="nav-button-backward" class="nav-button"
-            id="difficulty-menu-backward-upper"><i class=" forward-arrow fas fa-arrow-left fa-lg"></i></button>
-        </div>
-        <div class="difficulty-group">
-          <div class="top">
-            <div class="header">Select Difficulty</div>
-          </div>
-          <div class="middle difficulty">
-            <span class="difficulty-text difficulty-text-number" id="range-value">1</span>
-            <p class="difficulty-text difficulty-text-description" id="level-text">Easy</p>
-            <input title="difficulty-slider" type="range" id="range-input" min="1" max="5" value="1"
-              class="range-slider">
-          </div>
-        </div>
-        <div class="nav-buttons">
-          <div class="nav-left nav-left-lower"> <button title="nav-button-backward" class="nav-button"
-              id="difficulty-menu-backward-lower"><i class=" forward-arrow fas fa-arrow-left fa-lg"></i></button>
-          </div>
-          <div class="nav-right"> <button title="nav-button-forward" class="nav-button" id="difficulty-menu-forward"><i
-                class=" forward-arrow fas fa-arrow-right fa-lg"></i></button>
-          </div>
-        </div>
-      </div>
+
+      <%- include('partials/_difficultyMenu') %>
+
 
 
 
