--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -40,7 +40,7 @@
             <p>
               <%= signupMessage %>
             </p>
-            <button class="close-signup-alert" id="close-signup-alert"><i class="close-signup-alert-icon">x</i></button>
+            <!-- <button class="close-signup-alert" id="close-signup-alert"></button> -->
           </div>
 
 
