--- a/public/scss/_success.scss
+++ b/public/scss/_success.scss
@@ -1,51 +1,40 @@
-
 .success-svg {
     display: block;
     height: $size;
     width: $size;
-    color: $chalk-white; /* SVG path use currentColor to inherit this */
+    color: $chalk-white;
     max-width: 250px;
-  
     max-height: 250px;
-  }
-  
-  .success-circle {
+}
+
+.success-circle {
     stroke-dasharray: 76;
     stroke-dashoffset: 76;
     animation: draw 1s forwards;
-  }
-  
-  .success-tick {
+}
+
+.success-tick {
     stroke-dasharray: 18;
     stroke-dashoffset: 18;
     animation: draw 1s forwards 1s;
-  }
-  
-  @keyframes draw { 
-    to { stroke-dashoffset: 0 } 
-  }
-  
-  
-  
-  
-  
-  
-  /* For styling demo, not required */
-  
-  .success-container {
+}
+
+@keyframes draw {
+    to {
+        stroke-dashoffset: 0
+    }
+}
+
+.success-container {
     background-color: $chalkboard-green;
-    position:absolute;
-    left:0;
-    top:0;
-    width:100%;
-    height:100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
     @include center-flex;
-    // height: 100vh;
-    z-index:100;
-    // display:none;
+    z-index: 100;
     opacity: 1;
     transition: opacity 1s ease-in-out;
-    border:$largeWoodBorder;
-  }
-  
-  
+    border: $largeWoodBorder;
+}
