--- a/public/scss/_flashCards.scss
+++ b/public/scss/_flashCards.scss
@@ -46,13 +46,13 @@
 }
 
 .flash-container {
-    display: none;
+    display: flex;
 }
 
 .flash-card-container {
     width: 80%;
     max-width: 250px;
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
