--- a/public/scss/_highScoreChallengeAndQuiz.scss
+++ b/public/scss/_highScoreChallengeAndQuiz.scss
@@ -1,6 +1,6 @@
 .game-container,
 .quiz-container {
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
