--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -222,7 +222,7 @@ body {
   font-family: $chalkboardFont;
   font-size: $mobileHeaderTextSize;
   text-align: center;
-  height: 80px;
+  height: auto;
   width: 240px;
   color: $chalk-white;
 }
