--- a/public/views/flash.ejs
+++ b/public/views/flash.ejs
@@ -23,13 +23,10 @@
 
   <%- include('partials/_burger') %>
     <%- include('partials/_brand') %>
-      <!-- <%- include('partials/_modals') %> -->
+      <%- include('partials/_modals') %>
 
         <div class="main-container" id="main-container">
-          <!-- <%- include('partials/_activityMenuPractice') %> -->
-            <!-- <%- include('partials/_operatorMenuPractice') %> -->
-              <!-- <%- include('partials/_difficultyMenu') %> -->
-                <!-- <%- include('partials/_multipleChoicePractice') %> -->
+
                   <%- include('partials/_flashPractice') %>
 
 
