--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -33,7 +33,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  // overflow: hidden;
   @include center-flex;
   font-family: $chalkboardFont;
   position: relative;
