--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -38,7 +38,7 @@ body {
   font-family: $chalkboardFont;
   position: relative;
   min-width: 100vw;
-  height: 100vh;
+  height: 100%;
   min-height: -webkit-fill-available;
 }
 
