--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -37,7 +37,7 @@ body {
   @include center-flex;
   font-family: $chalkboardFont;
   position: relative;
-  min-width: 100vw;
+  min-width: 100%;
   height: 100%;
   min-height: -webkit-fill-available;
 }
