--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -37,8 +37,8 @@ body {
   @include center-flex;
   font-family: $chalkboardFont;
   position: relative;
-  min-width: 100%;
-  height: 100%;
+  min-width: 100vw ;
+  height: auto;
   min-height: -webkit-fill-available;
 }
 
