--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -22,33 +22,39 @@
 }
 
 html {
+  padding: 0;
+  margin: 0;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
-  width: auto;
-  height: auto;
-  min-height: -webkit-fill-available;
+  width: 100%;
+  height: 100%;
+  // min-height: -webkit-fill-available;
   // overflow: hidden;
 }
 
 body {
   padding: 0;
   margin: 0;
-  // overflow: hidden;
+  overflow: hidden;
   @include center-flex;
   font-family: $chalkboardFont;
   position: relative;
-  min-width: 100vw ;
-  height: auto;
-  min-height: -webkit-fill-available;
+  // min-width: 100vw ;
+  width: 100% ;
+  height: 100%;
+  // min-height: -webkit-fill-available;
 }
 
 /* Game Container Styles */
 .main-container {
   position: relative;
-  min-width: 100%;
-  max-width: 100%;
+  // min-width: 100%;
+  // max-width: 100%;
+  width:100%;
+  height:100%;
   @include center-flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 .middle {
