--- a/public/scss/_burger.scss
+++ b/public/scss/_burger.scss
@@ -127,6 +127,8 @@
     
     transition:all 0.5s ease;
     width: 300px;
+    max-height:calc(97vh - 6px);
+    max-width:calc(97vh - 6px);
     height: 600px;
     border-radius: 10px;
     background-color:$chalk-white;
