--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -150,6 +150,7 @@ body {
 .display-container {
   background: $chalkboard-green;
   top:0;
+  left:0;
   position: absolute;
   width: 100vw;
   height: 100vh;
