--- a/public/scss/_profile.scss
+++ b/public/scss/_profile.scss
@@ -132,7 +132,7 @@
 
 .avatar-modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
+    // margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
@@ -142,6 +142,9 @@
 .avatar-modal-header {
     display: flex;
     justify-content: space-between;
+    >h2{
+        font-size:24px;
+    }
 }
 
 .avatar-modal-close {
