--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -10,7 +10,8 @@
 @import './highScoreChallengeAndQuiz.scss';
 @import './flashCards.scss';
 @import './profile.scss';
-@import './success.scss';
+@import './success.scss'; 
+@import './landing.scss';
 
 /* Global Styles */
 * {
@@ -150,7 +151,7 @@ body {
 .display-container {
   background: $chalkboard-green;
   top:0;
-  left:0;
+
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -196,7 +197,6 @@ body {
   align-items: flex-start;
   justify-content: center;
 }
-
 .bottom {
   display: flex;
   align-items: center;
@@ -287,5 +287,43 @@ body {
   }
 }
 
+.privacy-link-container, .privacy-back-link-container{
+  position:absolute;
+  bottom:3vh;
+  left:0;
+  width:100%;
+  @include center-flex;
+}
+.privacy-link,.privacy-back-link{
+  color:$chalk-white;
+  font-size:12px;
+  &:visited{
+    color:$chalk-white;
+
+  }
+  &:link{
+    color:$chalk-white;
+  }
+  &:hover{
+    color:rgb(215, 229, 224)
+  }
+}
+.privacy-outer-container{
+ 
+  @include  center-flex;
+  height:100%;
+  width:100%;
+}
+.privacy-inner-container{
+  margin-top:12vh;
+  margin-bottom:10vh;
+  
+  width:85vw;
+  height:80vh;
+  overflow-y:scroll;
+  &>span{
+    color:$chalk-white !important;
+  }
+}
 @import './burger.scss';
 @import './media.scss';
