--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -148,13 +148,13 @@ body {
   display: flex;
 }
 
-.display-container {
+.main-container {
   background: $chalkboard-green;
   top:0;
-
+  left:0;
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   max-width: 100%;
   max-height: 100%;
   min-height: calc(-webkit-fill-available - 4vh);
@@ -164,18 +164,24 @@ body {
   border: $largeWoodBorder;
   transition:left 0.5s ease-in-out;
 }
-
+.display-container{
+  display:flex;
+  width:100%;
+  height:100%;
+  align-items: center;
+  justify-content: center;
+}
 .sub-container {
   background: $chalkboard-green;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   max-width: 100%;
   max-height: 100%;
   min-height: calc(-webkit-fill-available - 4vh);
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: $largeWoodBorder;
+  // border: $largeWoodBorder;
 }
 
 .inner {
