--- a/public/scss/_timesTables.scss
+++ b/public/scss/_timesTables.scss
@@ -5,7 +5,7 @@ $timesTableColumnWidth: 80px;
   display:none;
   justify-content: center;
   align-items: center;
-  
+
 }
 
 
@@ -108,7 +108,7 @@ $timesTableColumnWidth: 80px;
 .times-table th,
 .times-table td {
   // border: 1px solid $largeWoodBorder;
-  // padding: 8px;
+  padding: 8px;
   text-align: center;
   // text-align: right;
   height: $timesTableNumberSize;
@@ -238,6 +238,7 @@ font-size: 13px;
 }
 .times-table th, .times-table td{
   height:30px;
+  padding:2px;
 }
 }
 @media screen and (orientation:landscape) and(max-height:415px) {
