--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -43,7 +43,8 @@ body {
   // min-width: 100vw ;
   width: 100% ;
   height: 100%;
-  // min-height: -webkit-fill-available;
+   min-height: -webkit-fill-available;
+   min-width:fit-content;
 }
 
 /* Game Container Styles */
