--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -2,13 +2,13 @@
     .expanded-menu.active {
         transition: all 0.5s ease;
         width: calc(100vw - 30px - 4vw);
-        height: calc(100vh - 30px + -25vh);
+        height: calc(100vh - 25vh);
         border-radius: 10px;
         background-color: $chalk-white;
         display: flex;
         position: absolute;
         top: calc(-3vh + 15px);
-        right: calc(-3vw + 15px);
+        right: calc(-2vw + 15px);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -18,8 +18,16 @@
     .expanded-menu li {
         margin: 5px 0;
         text-align: center;
-        padding: 10px;
+        padding: 5px;
+
     }
+    .expanded-menu a {
+        color: $chalkboard-green;
+        text-decoration: none;
+        font-size: 15px;
+      }
+      
+      
     .login-welcome-message{
         display:none;
     }
@@ -36,7 +44,11 @@
       }
 
 }
-
+@media screen and (orientation:portrait) and (max-height: 570px) {
+    .welcome-header-index{
+        display:none;
+    }
+}
 
 @media screen and (min-width: 1024px) {
     .profile-section {
@@ -54,6 +66,36 @@
         max-width: none;
     }
 }
+@media screen and (min-width: 768px) {
+    .profile-section {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .profile-user-section {
+        flex-basis: 20%;
+    }
+
+    .badges {
+        // margin-left: 40px;
+        grid-template-columns: repeat(4, 1fr);
+        max-width: none;
+    }
+}
+
+
+@media only screen and (max-width:330px) {
+
+    .google-block {
+        min-height: 60px;
+    }
+
+    .google-login-group {
+        margin-bottom: 10px;
+    }
+}
+
+
 
 @media screen and (orientation: landscape) and (max-width: 767px) {
     .profile-section {
@@ -88,23 +130,124 @@
 }
 
 
-@media screen and (min-width: 768px) {
-    .profile-section {
-        flex-direction: column;
-        align-items: center;
+
+
+@media only screen and (max-aspect-ratio:1.75) and (orientation:portrait) {
+    /* CSS code for tablet devices */
+
+    .header {
+        font-size: 24px;
+        ;
+        margin-bottom: 30px;
+        padding-left: 40px;
+        padding-right: 25px;
     }
 
-    .profile-user-section {
-        flex-basis: 20%;
+    .icon-container {
+        width: 85px;
+        height: 85px;
+        margin: 0 5px;
     }
 
-    .badges {
-        // margin-left: 40px;
-        grid-template-columns: repeat(4, 1fr);
-        max-width: none;
+    .icon-text,
+    .operator-text {
+        font-size: 18px;
+    }
+
+    .bottom {
+        justify-content: space-between;
+        width: 90vw;
+    }
+
+    .nav-button {
+        font-size: 2.75em;
+        width: 100px;
+        height: 75px;
+
+    }
+
+    .icon {
+        font-size: 2.75em;
+    }
+
+    .game-top,
+    .flash-upper {
+        margin-bottom: 5vh;
+    }
+
+    .flash-text {
+        font-size: 2.75rem;
+    }
+
+    .flash-answer-box,
+    .flash-question-box {
+        max-width: 300px;
+        max-height: 250px;
+        font-size: 1.4em;
+    }
+
+    .question {
+        min-width: 250px;
+        height: 120px;
+        font-size: 1.8em;
+    }
+
+    .mc-top {
+        padding-bottom: 25px;
+    }
+
+    .mc-question {
+        font-size: 2.8em;
+    }
+
+    .option {
+        max-width: 130px;
+        height: 95px;
+        font-size: 1.8em;
+
+    }
+
+    .flash-middle {
+        margin: 0 100px;
+    }
+
+    .quiz-correctness-scores {
+        margin: 20px 0;
+
+        >* {
+            font-size: 1.6em;
+        }
+    }
+
+    .quiz-question {
+        height: 150px;
+        padding: 2em;
+
+    }
+
+    .titles-group {
+        margin-bottom: inherit;
+    }
+
+    .progress-container {
+        width: 100%;
+        margin: 0;
+    }
+
+    .nav-buttons {
+        margin-top: 25px;
+    }
+
+    .test-header {
+        margin-top: 50px;
+        margin-bottom: 0px;
+    }
+    .landing-choice{
+        width:90px;
+        height:90px;
+        margin:0;
     }
 }
-
 
 
 @media only screen and (max-width:580px) and (orientation:landscape) {
@@ -290,16 +433,6 @@
 
 
 
-@media only screen and (max-width:330px) {
-
-    .google-block {
-        min-height: 60px;
-    }
-
-    .google-login-group {
-        margin-bottom: 10px;
-    }
-}
 
 
 // Mobile Landscape (max-width:1000px)
@@ -334,15 +467,15 @@
         width: 75px;
     }
 
-    .middle {
+    .icons-middle {
         justify-content: flex-start;
         flex-basis: 200px;
         z-index: 2;
     }
 
-    .middle-inner {
+    .icons-middle-inner {
         justify-content: center;
-        width: 260px;
+        // width: 260px;
     }
 
 
@@ -475,8 +608,9 @@
     }
 
     .icon-container {
-        width: 85px;
-        height: 85px;
+        width: 65px;
+        height: 65px;
+        margin:5px;
     }
     body{
         width:100vw;
@@ -488,123 +622,6 @@
 
 
 
-@media only screen and (max-aspect-ratio:1.75) and (orientation:portrait) {
-    /* CSS code for tablet devices */
-
-    .header {
-        font-size: 24px;
-        ;
-        margin-bottom: 30px;
-        padding-left: 40px;
-        padding-right: 25px;
-    }
-
-    .icon-container {
-        width: 105px;
-        height: 105px;
-        margin: 10px;
-    }
-
-    .icon-text,
-    .operator-text {
-        font-size: 24px;
-    }
-
-    .bottom {
-        justify-content: space-between;
-        width: 90vw;
-    }
-
-    .nav-button {
-        font-size: 2.75em;
-        width: 100px;
-        height: 75px;
-
-    }
-
-    .icon {
-        font-size: 2.75em;
-    }
-
-    .game-top,
-    .flash-upper {
-        margin-bottom: 5vh;
-    }
-
-    .flash-text {
-        font-size: 2.75rem;
-    }
-
-    .flash-answer-box,
-    .flash-question-box {
-        max-width: 300px;
-        max-height: 250px;
-        font-size: 1.4em;
-    }
-
-    .question {
-        min-width: 250px;
-        height: 120px;
-        font-size: 1.8em;
-    }
-
-    .mc-top {
-        padding-bottom: 25px;
-    }
-
-    .mc-question {
-        font-size: 2.8em;
-    }
-
-    .option {
-        max-width: 130px;
-        height: 95px;
-        font-size: 1.8em;
-
-    }
-
-    .flash-middle {
-        margin: 0 100px;
-    }
-
-    .quiz-correctness-scores {
-        margin: 20px 0;
-
-        >* {
-            font-size: 1.6em;
-        }
-    }
-
-    .quiz-question {
-        height: 150px;
-        padding: 2em;
-
-    }
-
-    .titles-group {
-        margin-bottom: inherit;
-    }
-
-    .progress-container {
-        width: 100%;
-        margin: 0;
-    }
-
-    .nav-buttons {
-        margin-top: 25px;
-    }
-
-    .test-header {
-        margin-top: 50px;
-        margin-bottom: 0px;
-    }
-    .landing-choice{
-        width:90px;
-        height:90px;
-        margin:0;
-    }
-}
-
 @media only screen and (orientation:landscape) and (max-height:720px) and (min-aspect-ratio:1.75) {
     .inner {
         margin: 0 10px;
@@ -614,7 +631,8 @@
         font-size: 24px;
     }
     .hi,.welcome-header{
-        display:none;
+        // display:none;
+        font-size:18px;
     }
 }
 
@@ -675,13 +693,13 @@
         margin-bottom: 5vh;
     }
 
-    .middle {
+    .icons-middle {
         justify-content: flex-start;
     }
 
-    .middle-inner {
+    .icons-middle-inner {
         justify-content: center;
-        width: 360px;
+        // width: 360px;
     }
 
     .top {
