--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -5,12 +5,14 @@
 @import './brand.scss';
 @import './menus.scss';
 @import './flashMessages.scss';
+@import './modals.scss';
 @import './multipleChoice.scss';
 @import './loginSignupForgotUserPass.scss';
 @import './highScoreChallengeAndQuiz.scss';
 @import './flashCards.scss';
 @import './profile.scss';
 @import './success.scss'; 
+@import './privacy.scss'; 
 @import './landing.scss';
 
 /* Global Styles */
@@ -59,18 +61,10 @@ body {
   overflow: hidden;
 }
 
-.middle {
-  position: relative;
-  align-items: center;
-  justify-content: center;
-}
 
-/* Sub Container Styles */
-.sub-container {
-  width: 100%;
-}
 
-/* Box Container Styles */
+
+// /* Box Container Styles */
 .box-container {
   z-index: 10;
   display: flex;
@@ -86,24 +80,14 @@ body {
   margin-bottom: 1em;
 }
 
-.menu-box {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  background: lightgrey;
-  border-radius: 10px;
-  padding: 25px;
-  margin: 10px 0;
-}
 
-.title {
-  color: $chalk-white;
-  text-align: center;
-  padding: 20px;
-  width: 100%;
-}
+
+// .title {
+//   color: $chalk-white;
+//   text-align: center;
+//   padding: 20px;
+//   width: 100%;
+// }
 
 .title-description {
   color: $chalk-white;
@@ -122,28 +106,11 @@ body {
   padding: 0px 10px;
 }
 
-.message-modal {
-  visibility: hidden;
-  z-index: 10;
-  background-color: $chalk-white;
-  padding: 50px;
-  border-radius: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  border: 5px solid purple;
-  font-family: $chalkboardFont;
-}
-
 .real-menu-container,
 .practice-menu-container,
 .login-menu-container,
 .signup-menu-container,
 .activity-menu-container,
-.middle,
-.top,
-.bottom,
 .forgot-password-menu-container,
 .forgot-username-menu-container {
   display: flex;
@@ -167,12 +134,7 @@ body {
 }
 .display-container{
   display:flex;
-  width:100%;
-  height:100%;
-  align-items: center;
-  justify-content: center;
-}
-.sub-container {
+
   background: $chalkboard-green;
   width: 100%;
   height: 100%;
@@ -185,33 +147,8 @@ body {
   // border: $largeWoodBorder;
 }
 
-.inner {
-  background: $chalkboard-green;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: column;
-  margin: 0 15px;
-}
 
-.middle-inner {
-  display: grid;
-  grid-template-areas: "icon icon"
-    "icon icon";
-  grid-template-columns: 150px 150px;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: center;
-}
-.bottom {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding-top: 40px;
-}
-
-.top {
+.header-top {
   display: flex;
   align-items: end;
   justify-content: center;
@@ -232,7 +169,7 @@ body {
   justify-content: center;
 }
 
-.header,
+.header-text,
 .activity-title,
 .activity-type {
   font-family: $chalkboardFont;
@@ -242,13 +179,15 @@ body {
   width: 240px;
   color: $chalk-white;
 }
-.welcome-header{
+.welcome-header, .welcome-header-index{
   @include center-flex;
   flex-direction:column;
+  font-size:22px;
   >*{
     padding:10px 0px;
   }
 }
+
 .hide-from-view {
   visibility: hidden;
 }
@@ -294,44 +233,6 @@ body {
   }
 }
 
-.privacy-link-container, .privacy-back-link-container{
-  position:absolute;
-  bottom:3vh;
-  left:0;
-  width:100%;
-  @include center-flex;
-}
-.privacy-link,.privacy-back-link{
-  color:$chalk-white;
-  font-size:12px;
-  &:visited{
-    color:$chalk-white;
-
-  }
-  &:link{
-    color:$chalk-white;
-  }
-  &:hover{
-    color:rgb(215, 229, 224)
-  }
-}
-.privacy-outer-container{
- 
-  @include  center-flex;
-  height:100%;
-  width:100%;
-}
-.privacy-inner-container{
-  margin-top:12vh;
-  margin-bottom:10vh;
-  
-  width:85vw;
-  height:80vh;
-  overflow-y:scroll;
-  &>span{
-    color:$chalk-white !important;
-  }
-}
 @import './burger.scss';
 @import './media.scss';
 
