--- a/public/scss/_multipleChoice.scss
+++ b/public/scss/_multipleChoice.scss
@@ -96,6 +96,8 @@
     background-color: $kelly-green;
     color: $darkText;
     font-family: $chalkboardFont;
+    border-radius:25px;
+    padding:8px;
 }
 
 .incorrect-answer {
