--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -44,46 +44,6 @@
       }
 
 }
-@media screen and (orientation:portrait) and (max-height: 570px) {
-    .welcome-header-index{
-        display:none;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .profile-section {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .user {
-        flex-basis: 20%;
-    }
-
-    .badges {
-        // margin-left: 40px;
-        grid-template-columns: repeat(5, 1fr);
-        max-width: none;
-    }
-}
-@media screen and (min-width: 768px) {
-    .profile-section {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .profile-user-section {
-        flex-basis: 20%;
-    }
-
-    .badges {
-        // margin-left: 40px;
-        grid-template-columns: repeat(4, 1fr);
-        max-width: none;
-    }
-}
-
-
 @media only screen and (max-width:330px) {
 
     .google-block {
@@ -127,6 +87,7 @@
     .avatar-modal-content{
         max-width:400px;
     }
+
 }
 
 
@@ -146,7 +107,7 @@
     .icon-container {
         width: 85px;
         height: 85px;
-        margin: 0 5px;
+        margin: 5px;
     }
 
     .icon-text,
@@ -160,9 +121,9 @@
     }
 
     .nav-button {
-        font-size: 2.75em;
-        width: 100px;
-        height: 75px;
+        font-size: 2em;
+        width: 60px;
+        height: 50px;
 
     }
 
@@ -201,8 +162,8 @@
     }
 
     .option {
-        max-width: 130px;
-        height: 95px;
+        max-width: 18vmax;
+        height: 12vmax;
         font-size: 1.8em;
 
     }
@@ -215,13 +176,13 @@
         margin: 20px 0;
 
         >* {
-            font-size: 1.6em;
+            font-size: 1em;
         }
     }
 
     .quiz-question {
         height: 150px;
-        padding: 2em;
+        padding: 0.8em;
 
     }
 
@@ -247,7 +208,102 @@
         height:90px;
         margin:0;
     }
+    .header-text,.activity-title,.activity-type{
+        font-size:22px;
+        padding-bottom:20px;
+    }
+
+    #range-input{
+        margin:30px 0;
+        min-width:80vw;
+    }
+    .mc-middle-lower{
+        max-width: inherit;
+        max-height: inherit;
+    }
+    .mc-top{
+        padding-bottom:initial;
+    }
 }
+
+@media screen and (orientation:portrait) and (max-height: 570px) {
+    .welcome-header-index{
+        display:none;
+    }
+
+    .mc-question{
+        font-size:2em;
+    }
+    .question{
+        height:auto;
+        font-size:1.6em;
+    }
+    .operator-menu-container,.mc-quiz-container {
+        justify-content: flex-end;
+        padding-bottom:20px;
+        
+    }
+    .game-top,
+    .flash-upper {
+        margin-bottom: 0vh;
+    }
+   .activity-title, .activity-group{
+        font-size:22px;
+        padding-bottom:0px;
+    }
+    .high-title,.score-title{
+        line-height:normal
+    }
+    .score-text,.level-number{
+        font-size:1.1em;
+    }
+    .progress-container{
+         padding: 3px 10px 0 10px;
+    }
+    .level-container > *{
+        font-size:1.1em;
+    }
+    .score-container{
+        margin-top:0;
+    }
+    .game-question{
+        padding:4px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .profile-section {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .user {
+        flex-basis: 20%;
+    }
+
+    .badges {
+        // margin-left: 40px;
+        grid-template-columns: repeat(5, 1fr);
+        max-width: none;
+    }
+}
+@media screen and (min-width: 768px) {
+    .profile-section {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .profile-user-section {
+        flex-basis: 20%;
+    }
+
+    .badges {
+        // margin-left: 40px;
+        grid-template-columns: repeat(4, 1fr);
+        max-width: none;
+    }
+}
+
 
 
 @media only screen and (max-width:580px) and (orientation:landscape) {
@@ -292,6 +348,37 @@
 
     .create-account-form-button {
         margin-top: 0;
+    }
+
+    .game-top,
+    .flash-upper {
+        margin-bottom: 0vh;
+    }
+   .activity-title, .activity-group{
+        font-size:22px;
+        padding-bottom:0px;
+    }
+    .high-title,.score-title{
+        line-height:normal
+    }
+    .score-text,.level-number{
+        font-size:1.1em;
+    }
+    .progress-container{
+         padding: 3px 10px 0 10px;
+    }
+    .level-container > *{
+        font-size:1.1em;
+    }
+    .score-container{
+        margin-top:0;
+    }
+    .game-question{
+        padding:4px;
+    }
+    .game-lower{
+        max-width:40vw;
+
     }
 }
 
@@ -360,7 +447,34 @@
         flex-direction: column;
         justify-content: center;
     }
+    .score-container{
+        margin-top:0;
+    }
+    .high-title,.score-title{
+        line-height:normal
+    }
+    .score-text,.level-number{
+        font-size:1.1em;
+    }
+    .progress-container{
+         padding: 3px 10px 0 10px;
+    }
+    .level-container > *{
+        font-size:1.1em;
+    }
+    .score-container{
+        margin-top:0;
+    }
+    .game-question{
+        padding:4px;
+    }
+    .game-lower{
+        max-width:40vw;
 
+    }
+    .question-box{
+        flex-direction: column;
+    }
 }
 
 
