--- a/public/scss/_modals.scss
+++ b/public/scss/_modals.scss
@@ -2,14 +2,16 @@
 .message-modal {
     visibility: hidden;
     z-index: 10;
-    background-color: $chalk-white;
+    background-color: $chalkboard-green;
     padding: 50px;
     border-radius: 10px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    border: 5px solid purple;
+    border: 5px solid $chalk-white;
     font-family: $chalkboardFont;
+    color:$chalk-white;
+    font-size:.6em;
   }
   
