--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -11,234 +11,10 @@
 @import './highScoreChallengeAndQuiz.scss';
 @import './flashCards.scss';
 @import './profile.scss';
-@import './success.scss'; 
-@import './privacy.scss'; 
+@import './success.scss';
+@import './privacy.scss';
 @import './landing.scss';
-
-/* Global Styles */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-html {
-  padding: 0;
-  margin: 0;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  width: 100%;
-  height: 100%;
-  // min-height: -webkit-fill-available;
-  // overflow: hidden;
-}
-
-body {
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  @include center-flex;
-  font-family: $chalkboardFont;
-  position: relative;
-  // min-width: 100vw ;
-  width: 100% ;
-  height: 100%;
-   min-height: -webkit-fill-available;
-   min-width:fit-content;
-}
-
-/* Game Container Styles */
-.main-container {
-  position: relative;
-  // min-width: 100%;
-  // max-width: 100%;
-  width:100%;
-  height:100%;
-  @include center-flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-
-
-
-
-// /* Box Container Styles */
-.box-container {
-  z-index: 10;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  justify-content: space-between;
-  background: $shadow;
-  border-radius: 10px;
-  justify-content: center;
-  max-width: 400px;
-  margin-bottom: 1em;
-}
-
-
-
-// .title {
-//   color: $chalk-white;
-//   text-align: center;
-//   padding: 20px;
-//   width: 100%;
-// }
-
-.title-description {
-  color: $chalk-white;
-  font-size: 1em;
-  font-weight: 200;
-  width: 100%;
-  padding: 5% 25%;
-  text-align: center;
-}
-
-.message-intro {
-  font-weight: 600;
-  font-size: 2em;
-  text-align: center;
-  line-height: 2em;
-  padding: 0px 10px;
-}
-
-.real-menu-container,
-.practice-menu-container,
-.login-menu-container,
-.signup-menu-container,
-.activity-menu-container,
-.forgot-password-menu-container,
-.forgot-username-menu-container {
-  display: flex;
-}
-
-.main-container {
-  background: $chalkboard-green;
-  top:0;
-  left:0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-  min-height: calc(-webkit-fill-available - 4vh);
-  // flex-direction:row;
-  align-items: center;
-  justify-content: center;
-  border: $largeWoodBorder;
-  transition:left 0.5s ease-in-out;
-}
-.display-container{
-  display:flex;
-
-  background: $chalkboard-green;
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-  min-height: calc(-webkit-fill-available - 4vh);
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  // border: $largeWoodBorder;
-}
-
-
-.header-top {
-  display: flex;
-  align-items: end;
-  justify-content: center;
-}
-
-.titles-left {
-  display: flex;
-  flex-direction: column;
-}
-
-.titles-group {
-  width: 90%;
-  display: grid;
-  grid-template-areas: "4fr 1fr";
-  grid-gap: 25px;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.header-text,
-.activity-title,
-.activity-type {
-  font-family: $chalkboardFont;
-  font-size: $mobileHeaderTextSize;
-  text-align: center;
-  height: auto;
-  width: 240px;
-  color: $chalk-white;
-}
-.welcome-header, .welcome-header-index{
-  @include center-flex;
-  flex-direction:column;
-  font-size:22px;
-  >*{
-    padding:10px 0px;
-  }
-}
-
-.hide-from-view {
-  visibility: hidden;
-}
-
-.correctness {
-  padding: 0.4em;
-}
-
-.icon-small {
-  font-size: 2em;
-}
-
-.welcome-top {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.welcome-message {
-  text-align: center;
-  font-size: 26px;
-  color: $chalk-white;
-  padding-bottom: 10px;
-  width: min-content;
-}
-
-.activity-group {
-  @include center-flex;
-  flex-direction: column;
-}
-
-// index.ejs
-.profile-link-main {
-  color: $chalk-white;
-  text-decoration: none;
-
-  &:visited {
-    color: $chalk-white
-  }
-
-  &:hover {
-    color: $chalk-white
-  }
-}
-
+@import './timesTables.scss';
+@import './shared';
 @import './burger.scss';
 @import './media.scss';
-
-
-
-
-
-
-@import './timesTables.scss'
