--- a/public/scss/_menus.scss
+++ b/public/scss/_menus.scss
@@ -12,7 +12,9 @@
     flex-direction: column;
     margin: 0 15px;
   }
-  
+  .inner-operator{
+    display: flex;
+  }
   .icons-middle-inner {
 
     display:flex;
