--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -152,7 +152,7 @@ body {
     font-size: $mobileHeaderTextSize;
     text-align: center;
     height: auto;
-    width: 240px;
+    width: auto;
     color: $chalk-white;
   }
   .welcome-header, .welcome-header-index{
