--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -801,6 +801,7 @@
 @media screen and (orientation:landscape) and (max-height:720px) and (min-aspect-ratio:1.75) {
     .inner {
         margin: 0 10px;
+        min-width: 80px
     }
 
     .header {
@@ -840,11 +841,11 @@
         font-size: 30px;
     }
 
-    .icon-container {
-        width: 95px;
-        height: 95px;
-        margin: 10px;
-    }
+    // .icon-container {
+    //     width: 95px;
+    //     height: 95px;
+    //     margin: 10px;
+    // }
 
     .icon-text,
     .operator-text {
@@ -997,7 +998,11 @@
         margin-top: 0;
     }
 }
-
+@media screen and (orientation:landscape)and (min-width:500px) and (max-aspect-ratio:1.75) {
+    .nav-left-upper{
+        display: inherit;
+    }
+}
 @media screen and (min-width:768px) and (max-height:500px) {
     .profile-section {
         flex-direction: row;
@@ -1016,7 +1021,8 @@
         // display: flex;
         flex-direction: row;
     }
-
+    .nav-left-lower{
+    display: none;}
     // body{
     //     min-width:100vw;
     // }
