--- a/public/scss/_menus.scss
+++ b/public/scss/_menus.scss
@@ -7,6 +7,8 @@
   .inner {
     background: $chalkboard-green;
     display: flex;
+    width:8em;
+    height:8em;
     align-items: center;
     justify-content: space-around;
     flex-direction: column;
@@ -298,14 +300,14 @@
     transition: all 0.6s cubic-bezier(.25, .8, .25, 1);
     border: 2px solid rgba(100, 100, 100, 0);
     border-radius: 100%;
-    width: 85px;
-    height: 85px;
+    width: 5em;
+    height: 5em;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 10px;
-    margin: 10px;
+    padding: 8px;
+    margin: 8px;
 
     &:hover {
         cursor: pointer;
