Address Bugs / Css
Clean Up Css on headers
Times Table initial load
Profile Image Temp
Sizing of Icons and Profile image to aspect ratio 1:1

--- a/public/scss/_menus.scss
+++ b/public/scss/_menus.scss
@@ -7,8 +7,8 @@
   .inner {
     background: $chalkboard-green;
     display: flex;
-    width:7em;
-    height:7em;
+    // width:7em;
+    // height:7em;
     align-items: center;
     justify-content: space-around;
     flex-direction: column;
