--- a/public/scss/_menus.scss
+++ b/public/scss/_menus.scss
@@ -22,8 +22,9 @@
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
+    min-height:14em;
   }
 .operator-text {
     font-family: $chalkboardFont;
