--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -15,6 +15,7 @@ html {
   touch-action: manipulation;
   width: 100%;
   height: 100%;
+  background:$chalkboard-green;
   // min-height: -webkit-fill-available;
   // overflow: hidden;
 }
@@ -105,7 +106,8 @@ body {
     // flex-direction:row;
     align-items: center;
     justify-content: center;
-    border: $largeWoodBorder;
+    border-top: $largeWoodBorder;
+    border-bottom: $largeWoodBorder;
     transition:left 0.5s ease-in-out;
   }
   .display-container{
@@ -154,6 +156,7 @@ body {
     height: auto;
     width: auto;
     color: $chalk-white;
+    padding:10px;
   }
   .welcome-header, .welcome-header-index{
     @include center-flex;
