--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -106,8 +106,8 @@ body {
     // flex-direction:row;
     align-items: center;
     justify-content: center;
-    border-top: $largeWoodBorder;
-    border-bottom: $largeWoodBorder;
+    // border-top: $largeWoodBorder;
+    // border-bottom: $largeWoodBorder;
     transition:left 0.5s ease-in-out;
   }
   .display-container{
