--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -766,7 +766,7 @@
     .operator-group,
     .activity-group {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
     }
 
@@ -794,8 +794,16 @@
         width: 100vw;
     }
 }
+@media screen and (orientation: landscape) and (min-aspect-ratio: 1.75 / 1) and (max-height:400px){
 
+    .operator-group, .activity-group {
+        flex-direction: row;
+        &>.header-top{
+            padding-right:25px;
+        }
+    }
 
+}
 
 
 
@@ -1021,7 +1029,7 @@
     .real-menu-container,
     .practice-menu-container {
         display: flex;
-        flex-direction: row !important;
+        flex-direction: row ;
     }
     .nav-left-lower{
     display: none;}
