--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -143,9 +143,9 @@
   
     }
 
-    .icon {
-        font-size: 2.75em;
-    }
+    // .icon {
+    //     font-size: 2.5em;
+    // }
 
     .game-top,
     .flash-upper {
@@ -874,9 +874,9 @@
         height: 75px;
     }
 
-    .icon {
-        font-size: 3em;
-    }
+    // .icon {
+    //     font-size: 2.25em;
+    // }
 
     .flash-upper {
         margin-bottom: 5vh;
@@ -1050,7 +1050,7 @@
         // font-size:18px;
     }
     .inner{
-        width:5em;
+        // width:5em;
         height:5em;
     }
 }
