--- a/public/scss/_menus.scss
+++ b/public/scss/_menus.scss
@@ -302,8 +302,9 @@
     transition: all 0.6s cubic-bezier(.25, .8, .25, 1);
     border: 2px solid rgba(100, 100, 100, 0);
     border-radius: 100%;
-    width: 5em;
-    height: 5em;
+    min-width: 2.5em;
+    min-height: 2.5em;
+    aspect-ratio:1/1;
     display: flex;
     align-items: center;
     justify-content: center;
